force-app/main/default/objects/Member__c/fields/LineofBusiness__c.field-meta.xml
<CustomField>
    <fullName>LineofBusiness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LineofBusiness</label>
    <referenceTo>LineofBusiness__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>