force-app/main/default/objects/Member__c/fields/MemberID__c.field-meta.xml
<CustomField>
    <fullName>MemberID__c</fullName>
    <label>MemberID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>